...
  "error-user-registration-custom-field":
    "error-user-registration-custom-field",
  "error-user-registration-disabled": "User registration is disabled",
  "error-user-registration-secret":
    "User registration is only allowed via Secret URL",
  "error-you-are-last-owner":
    "You are the last owner. Please set new owner before leaving the room.",
  Actions: "Actions",
  activity: "activity",
  Activity: "Activity",
  Add_Reaction: "Add Reaction",
  Add_Server: "Add Server",
  Add_users: "Add users",
...
  announcement: "announcement",
  Announcement: "Announcement",
  Apply_Your_Certificate: "Apply Your Certificate",
  ARCHIVE: "ARCHIVE",
  archive: "archive",
  are_typing: "are typing",
  Are_you_sure_question_mark: "Are you sure?",
  Are_you_sure_you_want_to_leave_the_room:
    "Are you sure you want to leave the room {{room}}?",
  Audio: "Audio",
  Authenticating: "Authenticating",
  Automatic: "Automatic",
  Auto_Translate: "Auto-Translate",
  Avatar_changed_successfully: "Avatar changed successfully!",
  Avatar_Url: "Avatar URL",
  Away: "Away",
  Back: "Back",
  Black: "Black",
  Block_user: "Block user",
  Browser: "Browser",
  Broadcast_channel_Description:
    "Only authorized users can write new messages, but the other users will be able to reply",
  Broadcast_Channel: "Broadcast Channel",
  Busy: "Busy",
  By_proceeding_you_are_agreeing: "By proceeding you are agreeing to our",
...
  Message: "Message",
  Messages: "Messages",
  Message_Reported: "Message reported",
  Microphone_Permission_Message:
    "Pigeon needs access to your microphone so you can send audio message.",
  Microphone_Permission: "Microphone Permission",
  Mute: "Mute",
  muted: "muted",
  My_servers: "My servers",
  N_people_reacted: "{{n}} people reacted",
  N_users: "{{n}} users",
  name: "name",
  Name: "Name",
...
  Translate: "Translate",
  Try_again: "Try again",
  Two_Factor_Authentication: "Two-factor Authentication",
  Type_the_channel_name_here: "Type the channel name here",
  unarchive: "unarchive",
  UNARCHIVE: "UNARCHIVE",
  Unblock_user: "Unblock user",
  Unfavorite: "Unfavorite",
  Unfollowed_thread: "Unfollowed thread",
  Unmute: "Unmute",
  unmuted: "unmuted",
  Unpin: "Unpin",
  unread_messages: "unread",
  Unread: "Unread",
  Unread_on_top: "Unread on top",
  Unstar: "Unstar",
  Updating: "Updating...",
  Uploading: "Uploading",
  Upload_file_question_mark: "Upload file?",
  User: "User",
  Users: "Users",
  User_added_by: "User {{userAdded}} added by {{userBy}}",
...
  Threads_displaying_following: "Displaying Following",
  Threads_displaying_unread: "Displaying Unread",
  No_threads: "There are no threads",
  No_threads_following: "You are not following any threads",
  No_threads_unread: "There are no unread threads",
  Messagebox_Send_to_channel: "Send to channel",
  Set_as_leader: "Set as leader",
  Set_as_moderator: "Set as moderator",
  Set_as_owner: "Set as owner",
  Remove_as_leader: "Remove as leader",
  Remove_as_moderator: "Remove as moderator",
  Remove_as_owner: "Remove as owner",
  Remove_from_room: "Remove from room",
  Ignore: "Ignore",
  Unignore: "Unignore",
  User_has_been_ignored: "User has been ignored",
  User_has_been_unignored: "User is no longer ignored",
  User_has_been_removed_from_s: "User has been removed from {{s}}",
  User__username__is_now_a_leader_of__room_name_:
    "User {{username}} is now a leader of {{room_name}}",
...
    "User {{username}} removed from {{room_name}} leaders",
  User__username__removed_from__room_name__moderators:
    "User {{username}} removed from {{room_name}} moderators",
  User__username__removed_from__room_name__owners:
    "User {{username}} removed from {{room_name}} owners",
  The_user_will_be_removed_from_s: "The user will be removed from {{s}}",
  Yes_remove_user: "Yes, remove user!",
  Direct_message: "Direct message",
  Message_Ignored: "Message ignored. Tap to display it.",
};

