...
            })
          }
          style={{ backgroundColor: themes[theme].backgroundColor }}
          accessibilityLabel={I18n.t("Room_Info")}
          accessibilityTraits="button"
          enabled={!isGroupChat}
          testID="room-actions-info"
          theme={theme}
        >
          <View style={[styles.roomInfoContainer, { height: 72 * fontScale }]}>
            <Avatar
              text={avatar}
              style={styles.avatar}
...
        <List.Item
          title="Voice_call"
          onPress={() => {
            this.sendNotification("Incoming audio call from ");
            RocketChat.callJitsi(room?.rid, true);
          }}
          testID="room-actions-voice"
          left={() => <List.Icon name="phone" />}
          showActionIndicator
        />
        <List.Separator />
        <List.Item
          title="Video_call"
          onPress={() => {
            this.sendNotification("Incoming video call from ", false);
            RocketChat.callJitsi(room?.rid);
          }}
          testID="room-actions-video"
          left={() => <List.Icon name="camera" />}
          showActionIndicator
        />
        <List.Separator />
      </List.Section>
    );
...
            title={`${blocker ? "Unblock" : "Block"}_user`}
            onPress={() =>
              this.onPressTouchable({
                event: this.toggleBlockUser,
              })
            }
            testID="room-actions-block-user"
            left={() => (
              <List.Icon name="ignore" color={themes[theme].dangerColor} />
            )}
            showActionIndicator
            color={themes[theme].dangerColor}
          />
...
            title="Leave_channel"
            onPress={() =>
              this.onPressTouchable({
                event: this.leaveChannel,
              })
            }
            testID="room-actions-leave-channel"
            left={() => (
              <List.Icon name="logout" color={themes[theme].dangerColor} />
            )}
            showActionIndicator
            color={themes[theme].dangerColor}
          />
...
      canForwardGuest,
      canReturnQueue,
    } = this.state;
    const { rid, t, encrypted } = room;
    const isGroupChat = RocketChat.isGroupChat(room);
    return (
      <SafeAreaView testID="room-actions-view">
        <StatusBar />
        <List.Container>
          {this.renderRoomInfo()}
          {this.renderJitsi()}
          {this.renderE2EEncryption()}
          <List.Section>
...
                  onPress={() =>
                    this.onPressTouchable({
                      route: "RoomMembersView",
                      params: { rid, room },
                    })
                  }
                  testID="room-actions-members"
                  left={() => <List.Icon name="team" />}
                  showActionIndicator
                  translateSubtitle={false}
                />
                <List.Separator />
              </>
...
                        rid,
                        title: I18n.t("Add_users"),
                        nextAction: this.addUser,
                      },
                    })
                  }
                  testID="room-actions-add-user"
                  left={() => <List.Icon name="add" />}
                  showActionIndicator
                />
                <List.Separator />
              </>
            ) : null}
...
                  onPress={() =>
                    this.onPressTouchable({
                      route: "MessagesView",
                      params: { rid, t, name: "Files" },
                    })
                  }
                  testID="room-actions-files"
                  left={() => <List.Icon name="attach" />}
                  showActionIndicator
                />
                <List.Separator />
              </>
            ) : null}
...
                  onPress={() =>
                    this.onPressTouchable({
                      route: "MessagesView",
                      params: { rid, t, name: "Mentions" },
                    })
                  }
                  testID="room-actions-mentioned"
                  left={() => <List.Icon name="mention" />}
                  showActionIndicator
                />
                <List.Separator />
              </>
            ) : null}
...
                  onPress={() =>
                    this.onPressTouchable({
                      route: "MessagesView",
                      params: { rid, t, name: "Starred" },
                    })
                  }
                  testID="room-actions-starred"
                  left={() => <List.Icon name="star" />}
                  showActionIndicator
                />
                <List.Separator />
              </>
            ) : null}
...
                  onPress={() =>
                    this.onPressTouchable({
                      route: "SearchMessagesView",
                      params: { rid, encrypted },
                    })
                  }
                  testID="room-actions-search"
                  left={() => <List.Icon name="search" />}
                  showActionIndicator
                />
                <List.Separator />
              </>
            ) : null}
...
                  title="Share"
                  onPress={() =>
                    this.onPressTouchable({
                      event: this.handleShare,
                    })
                  }
                  testID="room-actions-share"
                  left={() => <List.Icon name="share" />}
                  showActionIndicator
                />
                <List.Separator />
              </>
            ) : null}
...
                  onPress={() =>
                    this.onPressTouchable({
                      route: "MessagesView",
                      params: { rid, t, name: "Pinned" },
                    })
                  }
                  testID="room-actions-pinned"
                  left={() => <List.Icon name="pin" />}
                  showActionIndicator
                />
                <List.Separator />
              </>
            ) : null}
...
                  onPress={() =>
                    this.onPressTouchable({
                      route: "NotificationPrefView",
                      params: { rid, room },
                    })
                  }
                  testID="room-actions-notifications"
                  left={() => <List.Icon name="notification" />}
                  showActionIndicator
                />
                <List.Separator />
              </>
            ) : null}
...
