...
      theme,
      navigation,
    } = this.props;

    return (
      <SafeAreaView
        testID="rooms-list-view"
        style={{ backgroundColor: themes[theme].backgroundColor }}
      >
        <StatusBar />
        {this.renderHeader()}
        {this.renderScroll()}
        {showSortDropdown ? (
...
