...
    } = this.props;
    const { rid, t, sysMes, bannerClosed, announcement } = room;

    return (
      <SafeAreaView
        style={{ backgroundColor: themes[theme].backgroundColor }}
        testID="room-view"
      >
        <StatusBar />
        <Banner
          rid={rid}
          title={I18n.t("Announcement")}
          text={announcement}
...
